# SK2Projekt

./: readme.md
AchtungDieKurve/: AchtungDieKurve.pro  AchtungDieKurve.pro.user.643fdd1  AchtungDieKurve.pro.user.775a238.xml  CMakeLists.txt  INIReader.h  client.cpp  client.h  connect.cpp  connect.h  connect.ui  game.cpp  gamedata.h  gamedraw.cpp  gamelogic.cpp  gamelogic.h  gamenetworking.cpp  gamenetworkingclient.cpp  gamenetworkingserver.cpp  gamewindow.cpp  gamewindow.h  global.cpp  global.h  host.cpp  host.h  host.ui  ini.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managedconnection.cpp  managedconnection.h  messages.h  player.cpp  player.h  server.cpp  server.h
